[gd_scene load_steps=78 format=2]

[ext_resource path="res://Player/Cat.gd" type="Script" id=1]
[ext_resource path="res://Player/blackcat.png" type="Texture" id=2]
[ext_resource path="res://Player/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/kitten/Run/KittenRun.png" type="Texture" id=5]
[ext_resource path="res://Player/kitten/walk/KittenWalk.png" type="Texture" id=6]
[ext_resource path="res://Player/Sound/collect.wav" type="AudioStream" id=23]
[ext_resource path="res://Player/Sound/jump.wav" type="AudioStream" id=24]
[ext_resource path="res://Player/kitten/Jump/KittenJump.png" type="Texture" id=25]

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 400, 199 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 199, 400, 199 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 398, 400, 199 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 597, 400, 199 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 796, 400, 199 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 995, 400, 199 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 1194, 400, 199 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 1393, 400, 199 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 1592, 400, 199 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 1791, 400, 199 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 1990, 400, 199 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 2189, 400, 199 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 256, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 512, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 0, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 256, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 512, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 0, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 400, 199 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 199, 400, 199 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 398, 400, 199 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 597, 400, 199 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 796, 400, 199 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 995, 400, 199 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 1194, 400, 199 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 1393, 400, 199 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 1592, 400, 199 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 1791, 400, 199 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 1990, 400, 199 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 2189, 400, 199 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 2388, 400, 199 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 995, 400, 199 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 1194, 400, 199 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 400, 199 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 199, 400, 199 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 398, 400, 199 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 597, 400, 199 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 796, 400, 199 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 995, 400, 199 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1194, 400, 199 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1393, 400, 199 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1592, 400, 199 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1791, 400, 199 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1990, 400, 199 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2189, 400, 199 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "KittenJump",
"speed": 5.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "KittenRun",
"speed": 5.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "KittenSit",
"speed": 5.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "KittenWalk",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "Sit",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=80]
radius = 56.0
height = 47.996

[node name="Cat" type="KinematicBody2D" groups=["Cats"]]
collision_mask = 54
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 26 )
animation = "Walk"
speed_scale = 0.1
flip_h = true

[node name="Cam" parent="." instance=ExtResource( 3 )]
smoothing_speed = 10.0

[node name="jumptimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.90799e-14, 0 )
rotation = 1.56375
shape = SubResource( 80 )

[node name="LookDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 56 )
collision_mask = 64

[node name="LookEDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 48, 56 )
collision_mask = 64

[node name="LookWDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -48, 56 )
collision_mask = 64

[node name="messagetimer" type="Timer" parent="."]

[node name="koyotetimer" type="Timer" parent="."]

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
area_mask = 6

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
area_mask = 6

[node name="ChkMWest" type="RayCast2D" parent="."]
position = Vector2( -80, 0 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 64

[node name="ChkTWest" type="RayCast2D" parent="."]
position = Vector2( -220, 0 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 70

[node name="ChkMEast" type="RayCast2D" parent="."]
position = Vector2( 80, 0 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 64

[node name="ChkTEast" type="RayCast2D" parent="."]
position = Vector2( 221, 0 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 70

[connection signal="Enemy" from="." to="." method="_on_Cat_Enemy"]
[connection signal="Food" from="." to="." method="_on_Cat_Food"]
[connection signal="Jump" from="." to="." method="_on_Cat_Jump"]
[connection signal="Message" from="." to="." method="_on_Cat_Message"]
[connection signal="timeout" from="jumptimer" to="." method="_on_jumptimer_timeout"]
[connection signal="timeout" from="messagetimer" to="." method="_on_messagetimer_timeout"]
[connection signal="timeout" from="koyotetimer" to="." method="_on_koyotetimer_timeout"]
